<resources>
    <string name="app_name">MChE Dane Pogodowe</string>
    <string name="button_info">Aktualne\ndane pogodowe</string>
    <string name="button_weather_charts">Wykresy pogodowe\nTrend pogodowy</string>
    <string name="button_settings">Ustawienia</string>
    <string name="button_application_info">O aplikacji</string>
    <string name="weather_data_time">Data i godzina</string>
    <string name="weather_data_temp">Temperatura</string>
    <string name="weather_data_dew_temp">Temp. punktu rosy</string>
    <string name="weather_data_wind">Prędkość wiatru</string>
    <string name="weather_data_wind_dir">Kierunek wiatru</string>
    <string name="weather_data_pressure">Ciśnienie</string>
    <string name="weather_data_humidity">Wilgotność</string>
    <string name="weather_data_rain">Opady</string>
    <string name="current_station">aktualnie \nwybrana stacja</string>
    <string name="update_weather_data">Odśwież dane pogodowe</string>
    <string name="update_stations">Odśwież stacje</string>
    <string name="station_selection">Wybierz domyślną stację pomiarową:</string>
    <string name="listview_el">Element listy</string>
    <string name="button_delete_db_content">Usuń zawartość bazy danych\n(dane pogodowe i stacje)</string>
    <string name="checkboxes_description">Wybierz wyświetlane dane pogodowe:</string>
    <string name="checkbox_local_time">Czas lokalny</string>
    <string name="checkbox_utc_time">Czas UTC</string>
    <string name="checkbox_pressure">Ciśnienie</string>
    <string name="checkbox_temperature">Temperatura</string>
    <string name="checkbox_dew_point_temperature">Temperatura punktu rosy</string>
    <string name="checkbox_humidity">Wilgotność</string>
    <string name="checkbox_rainfall_intensity_in_last_hour">Opad w ostatniej godzinie</string>
    <string name="checkbox_rainfall_intensity">Opad</string>
    <string name="checkbox_wind_direction">Kierunek wiatru</string>
    <string name="checkbox_wind_speed">Prędkość wiatru</string>
    <string name="checkbox_wind_speed_current">Prędkość wiatru(porywy)</string>
    <string name="button_for_checkboxes">Gotowe</string>
    <string name="chart_preparation_info">Przygotowywanie wykresu</string>
    <string name="textview_char_preparation_parameter">Co chcesz wyświetlić?</string>
    <string name="button_draw_chart">Pobierz dane i wyświetl wykres</string>
    <string name="textview_char_preparation_date">W który dzień?</string>
    <string name="checkbox_date_today">Dzisiaj</string>
    <string name="checkbox_date_choose">Wybierz datę</string>
    <string name="textview_char_preparation_date_info">Podaj datę w formacie RRRR-MM-DD\n(np.2019-12-30)</string>
</resources>
