<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_char_preparation_date"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/textview_char_preparation_date"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center_vertical"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radiobutton_date_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_date_today"
            android:onClick="TodayDateSelected"
            android:buttonTint="@color/design_default_color_primary"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radiobutton_date_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_date_choose"
            android:buttonTint="@color/design_default_color_primary"
            android:onClick="OtherDateSelected"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textview_char_preparation_date_info"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/textview_char_preparation_date_info"
        android:textSize="10dp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/input_date"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/textview_char_preparation_parameter"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/textview_char_preparation_parameter"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radiobutton_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_temperature"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_temperature_dew_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_dew_point_temperature"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_pressure"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_humidity"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_rainfall_intensity_in_last_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_rainfall_intensity_in_last_hour"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_rainfall_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_rainfall_intensity"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_wind_direction"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_wind_speed"
            android:buttonTint="@color/design_default_color_primary"/>
        <RadioButton
            android:id="@+id/radiobutton_wind_speed_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_wind_speed_current"
            android:buttonTint="@color/design_default_color_primary"/>
    </RadioGroup>

    <Button
        android:id="@+id/update_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:text="@string/button_draw_chart"
        android:onClick="DrawChart"
        android:layout_weight="1"
        />

</LinearLayout>
