<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_stations"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/station_selection_image"
        android:text="@string/current_station"
        android:textSize="20dp"
        android:onClick="ShowStations"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_stations"
        android:layout_above="@+id/update_info">
        <TableRow
            android:id="@+id/row_time_local"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_time_local"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/time_local" />
            <TextView
                android:id="@+id/weather_data_time_local"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_column="1"
                android:text="@string/weather_data_time"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="20dp" />
        </TableRow>
        <TableRow
            android:id="@+id/row_time_utc"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_time_utc"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/time_utc" />
            <TextView
                android:id="@+id/weather_data_time_utc"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_column="1"
                android:text="@string/weather_data_time"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="20dp" />
        </TableRow>
        <TableRow
            android:id="@+id/row_temp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_temp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/temp" />
            <TextView
                android:id="@+id/weather_data_temp"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_temp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_dew_temp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_dew_temp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/temp_dew"/>
            <TextView
                android:id="@+id/weather_data_dew_temp"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_dew_temp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_wind"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_wind"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/wind"/>
            <TextView
                android:id="@+id/weather_data_wind"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_wind"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_wind_current"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_wind_current"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/wind_current"/>
            <TextView
                android:id="@+id/weather_data_wind_current"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_wind"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_wind_dir"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_wind_dir"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/compass"/>
            <TextView
                android:id="@+id/weather_data_wind_dir"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_wind_dir"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_rainfall"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_rainfall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/rain"/>
            <TextView
                android:id="@+id/weather_data_rainfall"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_rain"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_rainfall_in_last_hour"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_rainfall_in_last_hour"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/rain_last_hour"/>
            <TextView
                android:id="@+id/weather_data_rainfall_in_last_hour"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_rain"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow            
            android:id="@+id/row_pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_pressure"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/pressure"/>
            <TextView
                android:id="@+id/weather_data_pressure"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_pressure"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_humidity"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/humidity"/>
            <TextView
                android:id="@+id/weather_data_humidity"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/weather_data_humidity"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/update_info"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_alignParentBottom="true"
        android:text="@string/update_weather_data"
        android:onClick="DownloadWeatherData"
        android:drawableLeft="@drawable/update"
        />

</RelativeLayout>
